Update 'yapb6187z-dotnet-basic' component image to: quay.io/rhtap_qe/rhtap-qe-dotnet-basic:6246781a9657ece664da5f468e20e709efdecaf2@sha256:ad05fd6dc6ecf3855d454da6a462790415c377b19c3dff480e4359d2362136e3

--- a/components/yapb6187z-dotnet-basic/overlays/development/deployment-patch.yaml
+++ b/components/yapb6187z-dotnet-basic/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: yapb6187z-dotnet-basic
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe-dotnet-basic:6246781a9657ece664da5f468e20e709efdecaf2@sha256:ad05fd6dc6ecf3855d454da6a462790415c377b19c3dff480e4359d2362136e3
+          name: container-image
